--- a/CSS.css
+++ b/CSS.css
@@ -1,11 +1,10 @@
 .hide {display: none;}
 
+#error {color: red; font-size: small;}
+
 .section1 {
     border-style: solid;
-    /* margin-bottom: 10px; */
-    /* margin-left: 10px; */
     padding: 10px;
-    /* width: 50%; */
     margin: auto;
     width: 40%;
     text-align: center;
@@ -16,8 +15,7 @@
 {
 	float: left;
     border-style: solid;
-    
-    padding : 8px;
+    padding : 1%;
     margin-left: 33%;
     margin-top: 2%;
     width: 17%;
@@ -35,17 +33,16 @@
 
 }
 
-
 #foodListHead
  {
- 	padding-right: 130px;
- 	padding-left: 130px;
+ 	padding-right: 100px;
+ 	padding-left: 100px;
  }
 
  #pickedListHead
  {
- 	padding-right: 65px;
- 	padding-left: 65px;
+ 	padding-right: 45px;
+ 	padding-left: 45px;
  }
 
  table
